--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,14 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="/public/assets/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+
+  {{!-- for rich text --}}
+  <!-- Include stylesheet -->
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <!-- Include the Quill library -->
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+  {{!-- Quill image compressor module --}}
+  <script src="https://unpkg.com/quill-image-compress@1.2.11/dist/quill.imageCompressor.min.js"></script>
 </head>
 
 <body>
