Display rich text on ticket descriptions

--- a/views/ticketView.handlebars
+++ b/views/ticketView.handlebars
@@ -28,7 +28,7 @@
   </ul>
   {{/if}}
   <div class="bg-light">
-    <p class="lead description info">{{description}}</p>
+    <p class="lead description info">{{{description}}}</p>
   </div>
   <a href="/tickets/editTicket/{{ticketId}}" class="btn btn-primary editTicketBtn" id="editButton" name="editButton"
     value="Edit Ticket" _id={{ticketId}} status={{status}} deadline={{deadline}} name={{name}} priority={{priority}}
