Added restricted user viewing and changed homepage

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,13 +40,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/tickets">Tickets</a>
+                <a class="nav-link" aria-current="page" href="/">Tickets</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users">Users</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">View Profile</a>
+                <a class="nav-link" href="/tickets/calendar">Calendar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/view/{{user_id}}">View Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/tickets/makeTicket">Create Ticket</a>
