--- a/views/allTicketsView.handlebars
+++ b/views/allTicketsView.handlebars
@@ -1,7 +1,7 @@
 
 <section> 
 <h1 class="display-4 fw-normal pageHeader">Tickets</h1>
-<form class="form-inline searchForm" action="/tickets" method="POST">
+<form class="form-inline searchForm" action="/" method="POST">
   <div class="col-auto form-group">
       <input class="form-control" type="text" id="searchTickets" name="searchTickets" placeholder="Search Tickets" value="{{query}}">
       <label class="visually-hidden-focusable" for="searchTickets">Search Tickets:</label>
