--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,7 +59,7 @@
                     style="vertical-align: -6px;">logout</i></a>
               </li>
             </ul>
-            <form class="d-flex" role="search" action="/tickets" method="POST">
+            <form class="d-flex" role="search" action="/" method="POST">
               <input class="form-control me-2" type="search" id="search" name="search" placeholder="Search for tickets"
                 aria-label="Search">
                 <label hidden for="submitBtn">
