--- a/views/editTicket.handlebars
+++ b/views/editTicket.handlebars
@@ -9,10 +9,10 @@
 <form action="/tickets/editTicket/{{_id}}" method="POST" class="form-inline editTicketForm" method="POST">
   <div class="col-auto editTicketForm-group">
         <label class="" for="ticketName" >Ticket Name</label>
-        <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder={{name}} value={{name}} > <br>
+        <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder={{name}}> <br>
 
         <label class="" for="ticketDescription">Description</label>
-        <input class="form-control" type="text" id="ticketDescription" name="ticketDescription" placeholder={{description}} value={{description}}> <br>
+        <input class="form-control" type="text" id="ticketDescription" name="ticketDescription" placeholder={{description}}> <br>
 
          <label class="" for="ticketCategory">Category</label>
         <div class="col-md-12"></div>
@@ -30,8 +30,8 @@
                 </span>
             </div>
             </div>
-
-         <select class="form-control"  id="ticketCategory" name="ticketCategory">    
+        <p>{{category}}</p>
+         <select class="form-control"  id="ticketCategory" name="ticketCategory" placeholder={{category}}>    
                     <option value="Service Request" selected="selected">Service Request</option>
                     <option value="Incident">Incident</option>
                     <option value="Problem">Problem</option>
@@ -39,14 +39,14 @@
         </select><br>
 
         <label class="" for="ticketDeadline">Deadline</label>
-        <input class="form-control" type="date" id="ticketDeadline" name="ticketDeadline" placeholder={{deadline}} value={{deadline}}><br>
+        <input class="form-control" type="date" id="ticketDeadline" name="ticketDeadline" placeholder={{deadline}}><br>
 
         <label class="" for="ticketPriority">Priority</label>
-         <select class="form-control"  id="ticketPriority" name="ticketPriority">
+         <select class="form-control"  id="ticketPriority" name="ticketPriority" placeholder={{priority}}>
                     <option value="Critical">Critical</option>
                     <option value="High">High</option>
                     <option value="Normal">Normal</option>
-                    <option value="Low" selected="selected">Low</option>
+                    <option value="Low">Low</option>
         </select><br><br>
   </div>
   <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Submit Changes">
