--- a/views/ticketView.handlebars
+++ b/views/ticketView.handlebars
@@ -105,9 +105,10 @@
             {{!-- <label for="contentInput" class="form-label">Comment:</label>
             <textarea id="contentInput" name="contentInput" placeholder="Enter your comment" class="form-control"
               rows="3"></textarea> --}}
-            <label for="contentInput" class="form-label">Comment:</label>
+            {{!-- <label for="contentInput" class="form-label">Comment:</label> --}}
             <input type='hidden' name='contentInput' id='contentInput'>
-            <div id="editor">
+            <a>Comment:</a>
+            <div id="editor" title="Comment">
               {{!-- no sample data to include --}}
             </div>
           </div>
