--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -47,9 +47,18 @@
                     <option value="Normal">Normal</option>
                     <option value="Low">Low</option>
         </select><br><br>
+
+
+         <label class="" for="ticketOwners">Owners</label>
+         <select class="form-control"  id="ticketOwners" name="ticketOwners" multiple="multiple">  
+          {{#each users}}
+             <option value={{this.id}}>{{this.firstName}} {{this.lastName}}</option>
+          {{/each}} 
+        </select><br><br>
   </div>
   <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Submit">
 </form>
 <script src="/public/js/mainTicket.js"></script>
+
 <br>
 </section> 
