fix adding owners bug

--- a/views/ticketView.handlebars
+++ b/views/ticketView.handlebars
@@ -11,7 +11,7 @@
 </div>
 <p class="lead info">Owners:</p>
 <ul>
-  {{#each owner}}
+  {{#each owners}}
     <li class="badge text-bg-primary rounded-pill"><a  class="pageLink-light" href= "/users/view/{{this._id}}">{{this.firstName}} {{this.lastName}}</a></li>
   {{/each}}
 </ul>
