--- a/views/editTicket.handlebars
+++ b/views/editTicket.handlebars
@@ -47,6 +47,13 @@
                     <option value="Normal">Normal</option>
                     <option value="Low">Low</option>
         </select><br><br>
+
+         <label class="" for="ticketOwners">Owners</label>
+         <select class="form-control"  id="ticketOwners" name="ticketOwners" multiple="multiple">  
+          {{#each users}}
+             <option value={{this.id}}>{{this.firstName}} {{this.lastName}}</option>
+          {{/each}} 
+        </select><br><br>
   </div>
   <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Submit Changes">
 </form>
