--- a/views/ticketView.handlebars
+++ b/views/ticketView.handlebars
@@ -28,7 +28,7 @@
 <div class="bg-light">
   <p class="lead description info">{{description}}</p>
 </div>
-<a href="/tickets/editTicket/{{ticketId}}" class="btn btn-primary editTicketBtn" id="editButton" name="editButton" value="Edit Ticket" _id={{ticketId}} status={{status}} deadline={{deadline}} name={{name}} priority={{priority}} category={{category}} description={{description}}>Edit ticket</a>
+<a href="/tickets/editTicket/{{ticketId}}" class="btn btn-primary editTicketBtn" id="editButton" name="editButton" value="Edit Ticket">Edit ticket</a>
   <div>
     <br> 
     <div class="border rounded commentBorder">
