--- a/views/editTicket.handlebars
+++ b/views/editTicket.handlebars
@@ -14,6 +14,21 @@
         <label class="" for="ticketDescription">Description</label>
         <input class="form-control" type="text" id="ticketDescription" name="ticketDescription" placeholder="{{description}}" value="{{description}}"> <br>
 
+         {{#ifEquals role "admin"}}
+         <label class="" for="ticketStatus">Status</label>
+         <select class="form-control"  id="ticketStatus" name="ticketStatus"> 
+                {{#select status}}
+                    <option value="To Do">To Do</option>
+             
+                    <option value="In Progress">In Progress</option> 
+               
+                    <option value="Problem">Problem</option>
+               
+                    <option value="Completed">Completed</option>
+                 {{/select}}
+         </select><br>
+        {{/ifEquals}}
+
          <label class="" for="ticketCategory">Category</label>
         <div class="col-md-12"></div>
             <div class="infoCategory">
