--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -1,70 +1,85 @@
-<section> 
-<h1 class="display-4 fw-normal pageHeader">Create Ticket</h1>
-{{#if error}}
-    <p id="error" class="error">{{error}}</p>
-{{else}}
-    <p id="error" class="error" hidden></p>
-{{/if}}
-<form action="/tickets/makeTicket" method="POST" class="form-inline makeTicketForm">
-  <div class="col-auto makeTicketForm-group">
-        <label class="" for="ticketName">Ticket Name</label>
-        <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder="Ticket Name" required> <br>
+<section>
+  <h1 class="display-4 fw-normal pageHeader">Create Ticket</h1>
+  {{#if error}}
+  <p id="error" class="error">{{error}}</p>
+  {{else}}
+  <p id="error" class="error" hidden></p>
+  {{/if}}
+  <form action="/tickets/makeTicket" method="POST" class="form-inline makeTicketForm">
+    <div class="col-auto makeTicketForm-group">
+      <label class="" for="ticketName">Ticket Name</label>
+      <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder="Ticket Name" required> <br>
 
-        <label class="" for="ticketDescription">Description</label>
-        <input class="form-control" type="text" id="ticketDescription" name="ticketDescription" placeholder="Ticket Description" required> <br>
+      {{!-- <label class="" for="ticketDescription">Description</label>
+      <input class="form-control" type="text" id="ticketDescription" name="ticketDescription"
+        placeholder="Ticket Description" required> <br> --}}
 
-         <label class="" for="ticketCategory">Category</label>
+      <input type='hidden' name='ticketDescription' id='ticketDescription'>
+      <a>Description</a>
+      <div id="editor" title="Description">
+        {{!-- no sample data to include --}}
+      </div>
+      <br>
+
+      <label class="" for="ticketCategory">Category</label>
       <div class="col-md-12"></div>
-          <div class="infoCategory">
-            <i class="icon-info-sign"></i>
-            <span class="extra-info">
-            <p class="infoSubtitle">Service Request:</p><p class="categoryDescription">Inquire about product or service. These tickets are usually low-risk and do not require immediate action (ex: request new hardware or software, want to reset their password, or renew their software licenses)</p>
-            <br>
-            <p class="infoSubtitle">Incident:</p> Point out a problem with product or service (ex: disruption to IT service)
-            <br>
-            <p class="infoSubtitle">Problem:</p> For technical staff - problem that may cause an incident for a customer
-            <br>
-            <p class="infoSubtitle">Change Request:</p> Make changes to product or service (ex: permission changes)
-            <br>
-            </span>
-          </div>
-        </div>
+      <div class="infoCategory">
+        <i class="icon-info-sign"></i>
+        <span class="extra-info">
+          <p class="infoSubtitle">Service Request:</p>
+          <p class="categoryDescription">Inquire about product or service. These tickets are usually low-risk and do not
+            require immediate action (ex: request new hardware or software, want to reset their password, or renew their
+            software licenses)</p>
+          <br>
+          <p class="infoSubtitle">Incident:</p> Point out a problem with product or service (ex: disruption to IT
+          service)
+          <br>
+          <p class="infoSubtitle">Problem:</p> For technical staff - problem that may cause an incident for a customer
+          <br>
+          <p class="infoSubtitle">Change Request:</p> Make changes to product or service (ex: permission changes)
+          <br>
+        </span>
+      </div>
+    </div>
 
-         <select class="form-control"  id="ticketCategory" name="ticketCategory">    
-                    <option value="Service Request">Service Request</option>
-                    <option value="Incident">Incident</option>
-                    <option value="Problem">Problem</option>
-                    <option value="Change Request">Change Request</option>
-        </select><br>
+    <select class="form-control" id="ticketCategory" name="ticketCategory">
+      <option value="Service Request">Service Request</option>
+      <option value="Incident">Incident</option>
+      <option value="Problem">Problem</option>
+      <option value="Change Request">Change Request</option>
+    </select><br>
 
-        <label class="" for="ticketDeadline">Deadline</label>
-        <input class="form-control" type="date" id="ticketDeadline" name="ticketDeadline" placeholder="MM/DD/YYYY" required><br>
+    <label class="" for="ticketDeadline">Deadline</label>
+    <input class="form-control" type="date" id="ticketDeadline" name="ticketDeadline" placeholder="MM/DD/YYYY"
+      required><br>
 
-        <label class="" for="ticketPriority">Priority</label>
-         <select class="form-control"  id="ticketPriority" name="ticketPriority">    
-                    <option value="Critical">Critical</option>
-                    <option value="High">High</option>
-                    <option value="Normal">Normal</option>
-                    <option value="Low">Low</option>
-        </select><br>
-         <label class="" for="ticketOwners">Owners</label>
-          <div class="col-md-12"></div>
-            <div class="infoCategory">
-                <i class="icon-info-sign"></i>
-                <span class="extra-info">
-                <p class="categoryDescription">Owners list cannot be edited after submitting ticket. Only admins can edit owners list submssion.</p>
-                </span>
-            </div>
-          </div>
-         <select class="form-control"  id="ticketOwners" name="ticketOwners" multiple="multiple">  
-          {{#each users}}
-             <option value={{this.id}}>{{this.firstName}} {{this.lastName}}</option>
-          {{/each}} 
-        </select><br><br>
-  </div>
-  <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Submit">
-</form>
-{{!-- <script src="/public/js/mainTicket.js"></script> --}}
-<script src="/public/js/quill.js"></script>
-<br>
-</section> 
+    <label class="" for="ticketPriority">Priority</label>
+    <select class="form-control" id="ticketPriority" name="ticketPriority">
+      <option value="Critical">Critical</option>
+      <option value="High">High</option>
+      <option value="Normal">Normal</option>
+      <option value="Low">Low</option>
+    </select><br>
+    <label class="" for="ticketOwners">Owners</label>
+    <div class="col-md-12"></div>
+    <div class="infoCategory">
+      <i class="icon-info-sign"></i>
+      <span class="extra-info">
+        <p class="categoryDescription">Owners list cannot be edited after submitting ticket. Only admins can edit owners
+          list submssion.</p>
+      </span>
+    </div>
+    </div>
+    <select class="form-control" id="ticketOwners" name="ticketOwners" multiple="multiple">
+      {{#each users}}
+      <option value={{this.id}}>{{this.firstName}} {{this.lastName}}</option>
+      {{/each}}
+    </select><br><br>
+    </div>
+    <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Submit">
+  </form>
+  {{!--
+  <script src="/public/js/mainTicket.js"></script> --}}
+  <script src="/public/js/quill.js"></script>
+  <br>
+</section>
