Rich text for edit ticket

--- a/views/editTicket.handlebars
+++ b/views/editTicket.handlebars
@@ -11,8 +11,15 @@
         <label class="" for="ticketName" >Ticket Name</label>
         <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder="{{name}}" value="{{name}}"> <br>
 
-        <label class="" for="ticketDescription">Description</label>
-        <input class="form-control" type="text" id="ticketDescription" name="ticketDescription" placeholder="{{description}}" value="{{description}}"> <br>
+        {{!-- <label class="" for="ticketDescription">Description</label>
+        <input class="form-control" type="text" id="ticketDescription" name="ticketDescription" placeholder="{{description}}" value="{{description}}"> <br> --}}
+
+        <input type='hidden' name='ticketDescription' id='ticketDescription'>
+        <a>Description</a>
+        <div id="editor" title="Description">
+          {{{description}}}
+        </div>
+        <br>
 
          {{#ifEquals role "admin"}}
          <label class="" for="ticketStatus">Status</label>
@@ -84,7 +91,7 @@
   </div>
   <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Submit Changes">
 </form>
-
+<script src="/public/js/quill.js"></script>
 <script src="/public/js/editTicket.js"></script>
 
 
