--- a/views/allUsersView.handlebars
+++ b/views/allUsersView.handlebars
@@ -1,7 +1,7 @@
 
 <section> 
 <h1 class="display-4 fw-normal pageHeader">Users</h1>
-<form class="form-inline searchForm" action="/users" method="POST">
+<form id="search-form" class="form-inline searchForm" action="/users" method="POST">
   <div class="col-auto form-group">
       <input class="form-control" type="text" id="searchUsers" name="searchUsers" placeholder="Search Users" value={{query}}>
       <label class="visually-hidden-focusable" for="searchUsers">Search Users:</label>
