--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -60,6 +60,19 @@
       <option value="Normal">Normal</option>
       <option value="Low">Low</option>
     </select><br>
+
+     <label class="" for="ticketTags">Tags</label>
+     <div class="col-md-12"></div>
+        <div class="infoCategory">
+          <i class="icon-info-sign"></i>
+          <span class="extra-info">
+            <p class="categoryDescription">Separate tags with commas.</p>
+          </span>
+        </div>
+      </div>
+    <input class="form-control" type="text" id="ticketTags" name="ticketTags"
+    placeholder="Ticket Tags" required> <br>
+
     <label class="" for="ticketOwners">Owners</label>
     <div class="col-md-12"></div>
     <div class="infoCategory">
