--- a/views/editTicket.handlebars
+++ b/views/editTicket.handlebars
@@ -89,7 +89,7 @@
           </span>
         </div>
       </div>
-        <input class="form-control" type="text" id="ticketTags" name="ticketTags" placeholder="{{tags}}" value="{{tags}}"> <br>
+        <input class="form-control" type="text" id="ticketTags" name="ticketTags" placeholder="{{tagsString}}" value="{{tagsString}}"> <br>
 
         {{#ifEquals role "admin"}}
          <label class="" for="ticketOwners">Owners</label>
