Fixed deadline issues

--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -50,8 +50,8 @@
     </select><br>
 
     <label class="" for="ticketDeadline">Deadline</label>
-    <input class="form-control" type="date" id="ticketDeadline" name="ticketDeadline" placeholder="MM/DD/YYYY"
-      required><br>
+    <input class="form-control" type="date" id="ticketDeadline" name="ticketDeadline" placeholder="MM/DD/YYYY">
+    <br>
 
     <label class="" for="ticketPriority">Priority</label>
     <select class="form-control" id="ticketPriority" name="ticketPriority">
