error message not resets after closing comment

--- a/views/ticketView.handlebars
+++ b/views/ticketView.handlebars
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" id="closeCommentModal"  class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button class="btn btn-primary" type="submit" value="Submit">Submit</button>
           {{!-- <button type="button" class="btn btn-primary" onclick="postComment('{{ticketId}}')">Save
             changes</button> --}}
