--- a/views/allUsersView.handlebars
+++ b/views/allUsersView.handlebars
@@ -3,7 +3,7 @@
 <h1 class="display-4 fw-normal pageHeader">Users</h1>
 <form id="search-form-users" class="form-inline searchForm" action="/users" method="POST">
   <div class="col-auto form-group">
-      <input class="form-control" type="text" id="searchUsers" name="searchUsers" placeholder="Search Users" value={{query}}>
+      <input class="form-control" type="text" id="searchUsers" name="searchUsers" placeholder="Search Users" value="{{query}}">
       <label class="visually-hidden-focusable" for="searchUsers">Search Users:</label>
   </div>
   <input class="btn btn-primary searchBtn" type="submit" id="subBtn" value="Search">
