Correct invalid HTML in make tickets
Can not use <p> inside of <span>
A date input can not have a placeholder value

--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -26,17 +26,15 @@
       <div class="infoCategory">
         <i class="icon-info-sign"></i>
         <span class="extra-info">
-          <p class="infoSubtitle">Service Request:</p>
-          <p class="categoryDescription">Inquire about product or service. These tickets are usually low-risk and do not
+          Service Request: Inquire about product or service. These tickets are usually low-risk and do not
             require immediate action (ex: request new hardware or software, want to reset their password, or renew their
-            software licenses)</p>
+            software licenses)
           <br>
-          <p class="infoSubtitle">Incident:</p> Point out a problem with product or service (ex: disruption to IT
-          service)
+          Incident: Point out a problem with product or service (ex: disruption to IT service)
           <br>
-          <p class="infoSubtitle">Problem:</p> For technical staff - problem that may cause an incident for a customer
+          Problem: For technical staff - problem that may cause an incident for a customer
           <br>
-          <p class="infoSubtitle">Change Request:</p> Make changes to product or service (ex: permission changes)
+          Change Request: Make changes to product or service (ex: permission changes)
           <br>
         </span>
       </div>
@@ -50,7 +48,7 @@
     </select><br>
 
     <label class="" for="ticketDeadline">Deadline</label>
-    <input class="form-control" type="date" id="ticketDeadline" name="ticketDeadline" placeholder="MM/DD/YYYY">
+    <input class="form-control" type="date" id="ticketDeadline" name="ticketDeadline">
     <br>
 
     <label class="" for="ticketPriority">Priority</label>
@@ -66,7 +64,7 @@
         <div class="infoCategory">
           <i class="icon-info-sign"></i>
           <span class="extra-info">
-            <p class="categoryDescription">Separate tags with commas.</p>
+            Separate tags with commas.
           </span>
         </div>
       </div>
@@ -78,8 +76,7 @@
     <div class="infoCategory">
       <i class="icon-info-sign"></i>
       <span class="extra-info">
-        <p class="categoryDescription">Owners list cannot be edited after submitting ticket. Only admins can edit owners
-          list submssion.</p>
+        Owners list cannot be edited after submitting ticket. Only admins can edit owners list submssion.
       </span>
     </div>
     </div>
