Fix client side error checking for make ticket
Previous code did not do anything at all as the form had no ID.

Previous code once the ID was added still did not do anything as it did not wait for the page to load.

Previous code once updated to wait was busted as it did not actually check for important stuff such as if values were blank, some non required values failed as the js thought they were required, and multiple instances of undefined vars being called.

--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -5,7 +5,7 @@
   {{else}}
   <p id="error" class="error" hidden></p>
   {{/if}}
-  <form action="/tickets/makeTicket" method="POST" class="form-inline makeTicketForm">
+  <form action="/tickets/makeTicket" method="POST" class="form-inline makeTicketForm" id="makeTicketForm">
     <div class="col-auto makeTicketForm-group">
       <label class="" for="ticketName">Ticket Name</label>
       <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder="Ticket Name" required> <br>
@@ -69,7 +69,7 @@
         </div>
       </div>
     <input class="form-control" type="text" id="ticketTags" name="ticketTags"
-    placeholder="Ticket Tags" required> <br>
+    placeholder="Ticket Tags" > <br>
 
     <label class="" for="ticketOwners">Owners</label>
     <div class="col-md-12"></div>
