--- a/views/ticketView.handlebars
+++ b/views/ticketView.handlebars
@@ -13,7 +13,7 @@
   <p class="lead info">Owners:</p>
   <ul>
     {{#each owners}}
-    <p>{{owners}}</p>
+    {{!-- <p>{{owners}}</p> --}}
     <li class="badge text-bg-primary rounded-pill"><a class="pageLink-light"
         href="/users/view/{{this._id}}">{{this.firstName}} {{this.lastName}}</a></li>
     {{/each}}
@@ -31,9 +31,7 @@
   <div class="bg-light">
     <p class="lead description info">{{{description}}}</p>
   </div>
-  <a href="/tickets/editTicket/{{ticketId}}" class="btn btn-primary editTicketBtn" id="editButton" name="editButton"
-    value="Edit Ticket" _id={{ticketId}} status={{status}} deadline={{deadline}} name={{name}} priority={{priority}}
-    category={{category}} description={{description}}>Edit ticket</a>
+  <a href="/tickets/editTicket/{{ticketId}}" class="btn btn-primary editTicketBtn" id="editButton">Edit ticket</a>
   <div>
     <br>
     <div class="border rounded commentBorder">
@@ -94,7 +92,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="commentModalLabel">Create Comment</h1>
+        <h2 class="modal-title fs-5" id="commentModalLabel">Create Comment</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div id="error-div" class="error-div" hidden></div>
