Update edit ticket to match the same required values as make ticket

--- a/views/editTicket.handlebars
+++ b/views/editTicket.handlebars
@@ -9,7 +9,7 @@
 <form action="/tickets/editTicket/{{_id}}" method="POST" class="form-inline editTicketForm" method="POST" id="makeTicketForm">
   <div class="col-auto editTicketForm-group">
         <label class="" for="ticketName" >Ticket Name</label>
-        <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder="{{name}}" value="{{name}}"> <br>
+        <input class="form-control" type="text" id="ticketName" name="ticketName" placeholder="{{name}}" value="{{name}}" required> <br>
 
         {{!-- <label class="" for="ticketDescription">Description</label>
         <input class="form-control" type="text" id="ticketDescription" name="ticketDescription" placeholder="{{description}}" value="{{description}}"> <br> --}}
