add input validation to ticket route

--- a/views/400.handlebars
+++ b/views/400.handlebars
@@ -1,5 +1,5 @@
 <section> 
 <a class="pageLink link-body-emphasis" href="/">Return to Homepage</a>
-<p>{{msg}}</p>
+<p>{{error}}</p>
 <img src="/public/assets/400.gif" alt="400 Bad Request" />
 </section>
