--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,6 +37,7 @@
   <main class="form-signin w-100 m-auto">
     {{else}}
     <main>
+      {{!-- bootstrap navbar adapted from https://getbootstrap.com/docs/5.2/components/navbar/ --}}
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand home-logo" href="/">TIKIT</a>
