clean up client validation

--- a/views/makeTicket.handlebars
+++ b/views/makeTicket.handlebars
@@ -91,5 +91,6 @@
   {{!--
   <script src="/public/js/mainTicket.js"></script> --}}
   <script src="/public/js/quill.js"></script>
+  <script src="/public/js/makeTicket.js"></script>
   <br>
 </section>
