--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,7 +24,7 @@
       <label for="passwordInput">Password</label>
     </div>
     <div class="form-bottom">
-      <input type="submit" class="w-100 btn btn-lg btn-primary" id="submitButton" name="submitButton" value="Submit" role="button">
+      <input type="submit" class="w-100 btn btn-lg btn-primary" id="submitButton" name="submitButton" value="Submit">
     </div>
   </form>
   <br>
