--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -53,7 +53,7 @@
     {{!-- role and title must be modified by an admin. defaults for both will just be `User` --}}
 
     <br>
-    <input type="submit" class="w-100 btn btn-lg btn-primary" id="submitButton" name="submitButton" value="Submit" role="button">
+    <input type="submit" class="w-100 btn btn-lg btn-primary" id="submitButton" name="submitButton" value="Submit">
   </form>
   <br>
   <h2 class="h4 mb-3 font-weight-normal">Already have an account?</h2>
